@@ -1,5 +1,6 @@
 2003-02-15  Ulrich Drepper  <drepper@redhat.com>
 
+	* tst-mutex2.c: Tests of trylock and unlock with ERROR mutexes.
 	* tst-mutex3.c (do_test): Add tests for trylock with RECURSIVE mutexes.
 
 	* sysdeps/unix/sysv/linux/pthread_kill.c (__pthread_kill): Don't
